fix collapse problem

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@
   /* border-color: #000; */
   /* border-width: 20px; */
   border: #000 dashed 10px;
-  width: 1000px;
+  width: 100%;
 }
 
 /* natural */
